--- a/match.html
+++ b/match.html
@@ -24,6 +24,10 @@
   </nav>
   <!-- Akhir Navigasi-->
 
+  <div class="progress">
+    <div class="indeterminate"></div>
+  </div>
+
   <div id="body-content">
   </div>
 
