--- a/team-detail.html
+++ b/team-detail.html
@@ -24,6 +24,10 @@
     </nav>
     <!-- Akhir Navigasi-->
 
+    <div class="progress">
+        <div class="indeterminate"></div>
+    </div>
+
     <div id="body-content">
         <div class="container">
             <div class="section">
@@ -47,7 +51,7 @@
 
     <div class="fixed-action-btn">
         <button class="btn-floating btn-large red modal-trigger" id="save">
-            <i class="large material-icons">save</i>
+            <i class="large material-icons" id="btnSaved">save</i>
         </button>
     </div>
 
